# streamlit-code-diff

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  MANIFEST.in  README.md  example_app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: DEPLOYMENT.md
.github/workflows/: changelog.yml  ci.yml  manual-release.yml  publish.yml
scripts/: build_and_package.py  bump_version.py  test_package.py
src/streamlit_code_diff/frontend/: package-lock.json  package.json
