[project]
name = "streamlit-code-diff"
version = "0.1.2"
description = "A Streamlit component for code diff visualization using v-code-diff"
readme = "README.md"
authors = [{ name = "Everton Colling", email = "evertoncolling@gmail.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["streamlit", "code-diff", "diff", "visualization", "component"]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "numpy>=1.24.4; python_version<'3.12'",
    "numpy>=1.26.0; python_version>='3.12'",
]

[project.urls]
Homepage = "https://github.com/evertoncolling/streamlit-code-diff"
Repository = "https://github.com/evertoncolling/streamlit-code-diff"
Issues = "https://github.com/evertoncolling/streamlit-code-diff/issues"

[build-system]
requires = ["hatchling", "build"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_code_diff"]
artifacts = ["src/streamlit_code_diff/frontend/build/*"]

[tool.uv]
dev-dependencies = ["streamlit>=1.28.0", "build>=1.0.0", "twine>=4.0.0"]
